# Apostasy-Engine

./: EDITOR_UI_IMPLEMENTATION.md  README.md  Todo.md  idea.md  shell.nix
core/: Cargo.toml
core/res/: model.glb
core/res/biomes/: alpine.biome.yaml  alpine.yaml  badlands.biome.yaml  bog.biome.yaml  chaparral.biome.yaml  desert.biome.yaml  desert.yaml  dunes.biome.yaml  dunes.yaml  floodplain.biome.yaml  forest.yaml  glacier.biome.yaml  jungle.biome.yaml  mangrove.biome.yaml  mountains.biome.yaml  mountains.yaml  plains.yaml  savana.biome.yaml  shrubland.biome.yaml  steppe.biome.yaml  swamp.biome.yaml  swamp.yaml  taiga.biome.yaml  tundra.biome.yaml  tundra.yaml
core/res/items/: cobblestone.yaml  dirt.yaml  grass.yaml  leaves.yaml  log.yaml  sand.yaml  sandstone.yaml  snow.yaml  stone.yaml
core/res/models/: cone.glb  cylinder.glb  sphere.glb
core/res/shaders/: shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  voxel.frag  voxel.frag.spv  voxel.vert  voxel.vert.spv  water.frag  water.frag.spv  water.vert  water.vert.spv
core/res/voxels/: cobblestone.yaml  dirt.yaml  grass.yaml  leaf.yaml  log.yaml  sand.yaml  sand_stone.yaml  snow.yaml  stone.yaml  water.yaml
core/src/: lib.rs
core/src/assets/: asset_manager.rs  gltf.rs  loader.rs  mod.rs  shader.rs  shader_loader.rs  shader_registry.rs
core/src/items/: container.rs  mod.rs  voxel_component.rs
core/src/objects/: component.rs  mod.rs  query.rs  resource.rs  scene.rs  tag.rs  world.rs
core/src/physics/: collider.rs  collision_system.rs  mod.rs  velocity.rs
core/src/rendering/: mod.rs
(+152 files in other folders)
